--- a/assets/js/directives/whiteboard/whiteboard.html
+++ b/assets/js/directives/whiteboard/whiteboard.html
@@ -1,3 +1,4 @@
 <h1>Board</h1>
 <div class="whiteboard" id="wbContent" wb-id="0"></div>
 <button ng-click="createTextSticker()">Create text sticker</button>
+<button ng-click="createImageSticker()">Create image sticker</button>
